# ecitygml

./: Cargo.toml  README.md
.github/workflows/: release.yml
bindings/cpp/: .gitignore  CMakeLists.txt  README.md
bindings/cpp/include/ecitygml/: core.hpp  ecitygml.h  io.hpp
bindings/cpp/tests/: CMakeLists.txt  test_io.cpp
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: city_model_summary.py  export_obj.py  road_network.py
bindings/python/python/ecitygml/: __init__.py  _ecitygml.pyi  sample_script.py
bindings/python/src/: city_objects.rs  enums.rs  geometry.rs  lib.rs  model.rs
bindings/python/tests/: README.md  conftest.py  test_building.py  test_ecitygml.py  test_enums.py  test_geometry.py  test_reader.py  test_transportation.py
crates/ecitygml/: Cargo.toml
crates/ecitygml-cli/: Cargo.toml
crates/ecitygml-cli/src/: cli.rs  main.rs
crates/ecitygml-cli/src/commands/: list_objects.rs  mod.rs  statistics.rs  transform.rs  validate.rs
crates/ecitygml-codelist/: Cargo.toml  README.md
crates/ecitygml-codelist/src/: lib.rs
crates/ecitygml-codelist/src/adv/: mod.rs
crates/ecitygml-codelist/src/adv/building/: building_function_value.rs  mod.rs  roof_type_value.rs
crates/ecitygml-codelist/src/sig3d/: mod.rs
crates/ecitygml-codelist/src/sig3d/v2/: mod.rs
crates/ecitygml-codelist/src/sig3d/v2/appearance/: mod.rs  texture_mime_type_value.rs
crates/ecitygml-codelist/src/sig3d/v2/bridge/: bridge_class_value.rs  bridge_function_value.rs  bridge_usage_value.rs  mod.rs
crates/ecitygml-codelist/src/sig3d/v2/building/: building_class_value.rs  building_function_value.rs  building_furniture_class_value.rs  building_furniture_function_value.rs  building_furniture_usage_value.rs  building_installation_class_value.rs  building_installation_function_value.rs  building_installation_usage_value.rs  building_room_class_value.rs  building_room_function_value.rs  building_room_usage_value.rs  building_usage_value.rs  int_building_installation_class_value.rs  int_building_installation_function_value.rs  int_building_installation_usage_value.rs  mod.rs  roof_type_value.rs
crates/ecitygml-codelist/src/sig3d/v2/city_furniture/: city_furniture_class_value.rs  city_furniture_function_value.rs  city_furniture_usage_value.rs
crates/ecitygml-codelist/src/sig3d/v2/city_object_group/: city_object_group_class_value.rs  city_object_group_function_value.rs  city_object_group_usage_value.rs  mod.rs
crates/ecitygml-codelist/src/sig3d/v2/core/: implicit_geometry_mime_type_value.rs  mod.rs
crates/ecitygml-codelist/src/sig3d/v2/land_use/: land_use_class_value.rs  land_use_function_value.rs  land_use_usage_value.rs  mod.rs
crates/ecitygml-codelist/src/sig3d/v2/transportation/: auxiliary_traffic_area_function_value.rs  auxiliary_traffic_area_surface_material_value.rs  mod.rs  traffic_area_function_value.rs  traffic_area_surface_material_value.rs  traffic_area_usage_value.rs  transportation_complex_class_value.rs  transportation_complex_function_value.rs  transportation_complex_usage_value.rs
crates/ecitygml-codelist/src/sig3d/v2/tunnel/: mod.rs  tunnel_class_value.rs  tunnel_function_value.rs  tunnel_usage_value.rs
crates/ecitygml-codelist/src/sig3d/v2/vegetation/: plant_cover_class_value.rs  plant_cover_function_value.rs  plant_cover_usage_value.rs  solitary_vegetation_object_class_value.rs  solitary_vegetation_object_function_value.rs  solitary_vegetation_object_usage_value.rs  species_value.rs
crates/ecitygml-codelist/src/sig3d/v2/water_body/: water_body_class_value.rs  water_body_function_value.rs  water_body_usage_value.rs  water_level_value.rs
crates/ecitygml-core/: Cargo.toml
crates/ecitygml-core/src/: error.rs  lib.rs
crates/ecitygml-core/src/arena/: city_model_arena.rs  mod.rs
crates/ecitygml-core/src/arena/convert/: mod.rs
crates/ecitygml-core/src/index/: bvh.rs  mod.rs
crates/ecitygml-core/src/model/: mod.rs
crates/ecitygml-core/src/model/appearance/: abstract_surface_data.rs  abstract_surface_data_kind.rs  abstract_surface_data_property.rs  abstract_texture.rs  abstract_texture_kind.rs  appearance.rs  geometry_reference.rs  georeferenced_texture.rs  mod.rs  parameterized_texture.rs  surface_data_kind.rs  surface_data_property.rs  texture_kind.rs  x3d_material.rs
crates/ecitygml-core/src/model/building/: abstract_building.rs  abstract_building_kind.rs  abstract_building_subdivision.rs  abstract_building_subdivision_kind.rs  abstract_building_subdivision_property.rs  building.rs  building_constructive_element.rs  building_constructive_element_property.rs  building_installation.rs  building_installation_property.rs  building_kind.rs  building_part.rs  building_part_property.rs  building_room.rs  building_room_property.rs  building_subdivision_kind.rs  building_subdivision_property.rs  (+3 more)
crates/ecitygml-core/src/operations/: geometry_index.rs  geometry_store.rs  mod.rs  visitor.rs
crates/ecitygml-core/src/resolver/: feature_resolver.rs  mod.rs
crates/ecitygml-core/src/store/: city_model_graphics_store.rs  implicit_geometry_store.rs  mod.rs
crates/ecitygml-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/ecitygml-ffi/src/: lib.rs
crates/ecitygml-gui/: Cargo.toml
crates/ecitygml-gui/src/: app.rs  color.rs  main.rs  mesh.rs  scene.rs
crates/ecitygml-gui/src/ui/: inspector.rs  mod.rs  sidebar.rs  toolbar.rs
crates/ecitygml-io/: Cargo.toml
crates/ecitygml-io/src/: error.rs  format.rs  lib.rs
crates/ecitygml-io/src/gml/: mod.rs  read.rs  read_impl.rs  validate_impl.rs  write.rs  write_impl.rs
crates/ecitygml-io/tests/: collector_test.rs  gml_reader_test.rs  version_detection_test.rs
crates/ecitygml-transform/: Cargo.toml
crates/ecitygml-transform/src/: lib.rs
crates/ecitygml-transform/src/spatial_index/: bvh.rs  mod.rs
crates/ecitygml/src/: lib.rs
tests/fixtures/: ASAM-Ex_Bidirectional_Junction.gml  ASAM-UC_RoadShape.gml  FZK-Haus-LoD1-KIT-IAI-KHH-B36-V1__v3.gml  FZK-Haus-LoD2-KIT-IAI-KHH-B36-V1__v3.gml  FZK-Haus-LoD3-KIT-IAI-KHH-B36-V1__v3.gml  README.md  TUM-Main-Entrance.gml
(+807 files in other folders)
