[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.13"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/ecitygml"

[workspace.dependencies]
egml = { version = "0.0.1-alpha.13" }

thiserror = "2.0.18"
anyhow = "1.0.101"
clap = "4.5.58"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
nalgebra = "0.34.1"
serde = "1.0.228"
serde_yaml = "0.9.34"
quick-xml = "0.39.0"
itertools = "0.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
rayon = "1.11.0"
walkdir = "2.5.0"
uuid = "1.20.0"
palette = "0.7.6"
colorous = "1.0.16"
zstd = "0.13.3"
flate2 = "1.1.9"
libc = "0.2.181"
humansize = "2.1.3"
chrono = "0.4.43"
