[package]
name = "ecitygml-python"
version = "0.0.2-alpha.3"
edition = "2021"
rust-version = "0.0.2-alpha.3"

[lib]
name = "_ecitygml"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
egml = { version = "0.0.2-alpha.3" }

ecitygml-rs = { package = "ecitygml", version = "0.0.2-alpha.3", path = "../../crates/ecitygml" }
pyo3 = { version = "0.0.2-alpha.3", features = ["abi3-py313"] }
pyo3-stub-gen = { version = "0.0.2-alpha.3", default-features = false }

[workspace]
