[package]
name = "ecitygml-python"
version = "0.0.2-alpha.4"
edition = "2021"
rust-version = "0.0.2-alpha.4"

[lib]
name = "_ecitygml"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
egml = { version = "0.0.2-alpha.4" }

ecitygml-rs = { package = "ecitygml", version = "0.0.2-alpha.4", path = "../../crates/ecitygml" }
pyo3 = { version = "0.0.2-alpha.4", features = ["abi3-py313"] }
pyo3-stub-gen = { version = "0.0.2-alpha.4", default-features = false }

[workspace]
