[package]
name = "ecitygml-codelist"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codelists for CityGML data."


[dependencies]
ecitygml-core = { version = "0.0.2-alpha.5", path = "../ecitygml-core" }

egml = { workspace = true }

thiserror = { workspace = true }
rayon = { workspace = true }
