[package]
name = "ecitygml-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI bindings for ecitygml."

[lib]
crate-type = ["cdylib"]

[dependencies]
egml = { workspace = true }
ecitygml = { version = "0.0.1-alpha.13", path = "../ecitygml" }

anyhow = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
